# wyrdbound-dice

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml  security.yml
.pi/prompts/: speckit.plan.md
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/extensions/git/: git-config.yml
.specify/integrations/: pi.manifest.json  speckit.manifest.json
.specify/integrations/pi/scripts/: update-context.ps1  update-context.sh
.specify/memory/: constitution.md
specs/001-dice-rolling-library/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-dice-rolling-library/checklists/: requirements.md
specs/001-dice-rolling-library/contracts/: api.md
src/wyrdbound_dice/: __init__.py  debug_logger.py  dice.py  errors.py  expression_lexer.py  expression_parser.py  expression_token.py  roll_result.py
tests/: test_base.py  test_convenience_function.py  test_debug_logging.py  test_dice.py  test_dice_chaos_engineering.py  test_dice_drop_highest_lowest.py  test_dice_exploding_rerolls.py  test_dice_fudge.py  test_dice_keep_highest_lowest.py  test_dice_modifiers.py  test_dice_percentile.py  test_dice_reroll.py  test_dice_rng.py  test_dice_system_shorthands.py  test_dice_unicode_and_special_characters.py  test_dice_zero_dice_edge_cases.py  test_expression_parsing.py  test_infinite_conditions.py
tools/: graph.py  roll.py
